--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "mapbox-gl": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-map-gl": "^7.0.16",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "uuidv4": "^6.2.13"
   },
   "scripts": {
     "start": "react-scripts start",
